// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > isFullWidth switches to a row layout on desktop with the CTA alongside 1`] = `
<div>
  <div
    class="rounded-surface border border-subtle bg-raised p-6 relative flex transition-all duration-200 hover:border-strong hover:shadow-sm w-full flex-col md:flex-row md:items-center md:justify-between md:gap-6"
  >
    <div
      class="flex flex-col gap-4 md:flex-1"
    >
      <img
        alt=""
        class="w-full rounded-surface object-cover"
        src="/images/team/member.jpg"
      />
      <div
        class="text-size-sm text-secondary flex flex-col gap-3 leading-normal"
      >
        <div
          class="flex flex-row items-center gap-2"
        >
          <p
            class="text-size-md text-primary leading-snug font-semibold"
          >
            John Doe
          </p>
        </div>
        <p>
          Developer
        </p>
      </div>
    </div>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--primary bg-bluedot-normal link-on-dark mt-4 after:absolute after:inset-0 md:mt-0 md:shrink-0"
      href="https://linkedin.com/in/johndoe"
      tabindex="0"
    >
      LinkedIn
    </a>
  </div>
</div>
`;

exports[`Card > renders the CTA as the single real link, stretched over the card 1`] = `
<div>
  <div
    class="rounded-surface border border-subtle bg-raised p-6 relative flex transition-all duration-200 hover:border-strong hover:shadow-sm flex-col"
  >
    <div
      class="flex flex-col gap-4"
    >
      <img
        alt=""
        class="w-full rounded-surface object-cover"
        src="/images/team/member.jpg"
      />
      <div
        class="text-size-sm text-secondary flex flex-col gap-3 leading-normal"
      >
        <div
          class="flex flex-row items-center gap-2"
        >
          <p
            class="text-size-md text-primary leading-snug font-semibold"
          >
            John Doe
          </p>
        </div>
        <p>
          Developer
        </p>
      </div>
    </div>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--primary bg-bluedot-normal link-on-dark mt-4 after:absolute after:inset-0"
      href="https://linkedin.com/in/johndoe"
      tabindex="0"
    >
      LinkedIn
    </a>
  </div>
</div>
`;
